# cv-gen

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cv-gen.cabal  cv.cabal  wael.cls  waelcv.cls
app/: Main.hs
app/CV/: InteractiveApp.hs  Latex.hs  LuaLatex.hs  Types.hs
example/: example.yaml
