cabal-version:   2.2
name:            cv-gen
version:         0.1.0.0

-- synopsis:
-- description:
license:         BSD-2-Clause
license-file:    LICENSE
author:          Wael Ben Dhia
maintainer:      waelbendhia@gmail.com

-- copyright:
category:        Text
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall -threaded

executable cv-gen
  import:             warnings
  main-is:            Main.hs
  other-modules:
    CV.InteractiveApp
    CV.Latex
    CV.LuaLatex
    CV.Types

  default-extensions:
    NoImplicitPrelude
    ApplicativeDo
    BlockArguments
    DataKinds
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedLabels
    OverloadedStrings
    PolyKinds
    ScopedTypeVariables
    StrictData
    TemplateHaskell
    TypeFamilies
    TypeOperators
    UndecidableInstances

  build-depends:
    , aeson
    , base                  ^>=4.16.4.0
    , brick
    , bytestring
    , directory
    , filepath
    , HaTeX
    , optics
    , optics-th
    , optparse-applicative
    , polysemy
    , process
    , relude
    , template-haskell
    , vty
    , yaml

  hs-source-dirs:     app
  default-language:   GHC2021
